# policy-based-search

./: CMakeLists.txt  Evaluation.md  Installation.md  Problem.md  ProjectHome.md  README  bestfirstsearch.hpp  evaluation.h  evaluation.hpp  main.cpp  problem.h  problem.hpp  queue_set.hpp  search.h  search.hpp  search.kdev4
examples/: CMakeLists.txt  Romania.cpp  Romania.h  Romania.hpp  TSP.cpp  TSP.h  TSP.hpp  gg.hpp  random.cpp  random.h  random.hpp  rgg.cpp  test.cpp
examples/utils/: node_set.hpp  queue_set.hpp  to_string.h
utils/: queue_set.hpp
